# Ohanabot

./: .env.dev  .env.prod  .gitignore  README.md  bot.py  pyproject.toml
QtDatabaseOption/: addinputdialog.cpp  addinputdialog.h  inputdialog.cpp  inputdialog.h  mainwindow.cpp  mainwindow.h  mainwindow.ui  test.pro
abandon/search/: __init__.py
abandon/task/: __init__.py
abandon/test/: __init__.py
data/: 466010106info.txt  915759345info.txt  difficulty.txt  selected_problem.json
data/petpet/: resource_list.json  update_list.py
doc/: C与C++分支和循环.md  C与C++变量与运算符.html  C与C++变量与运算符.md  C与C++读入和输出.md  test.cpp
lib/: codeforcesAPI.py  config.py  databaseclass.py  dependclass.py  spider.py  test.txt  to_picture.py
src/basic_plugins/acm_contests/: __init__.py
src/basic_plugins/auto_add_friend/: __init__.py
src/basic_plugins/memu/: Data_manager.py  __init__.py
src/basic_plugins/myinfo/: __init__.py
src/basic_plugins/register/: __init__.py
src/basic_plugins/unregister/: __init__.py
src/everyday_pro/: __init__.py
src/game_plugins/jrrp/: __init__.py
src/game_plugins/nonebot_plugin_abstract/: __init__.py
src/game_plugins/nonebot_plugin_couplets/: __init__.py
src/game_plugins/nonebot_plugin_handle/: __init__.py
src/game_plugins/nonebot_plugin_wordle/: __init__.py
src/plugins/acm_contests/: __init__.py
src/plugins/auto_add_friend/: __init__.py
src/plugins/chatgpt/: Chatbot.py  __init__.py
src/plugins/check_rank/: __init__.py
src/plugins/contest_info/: __init__.py
src/plugins/everyday_pro/: __init__.py
src/plugins/jrrp/: __init__.py
(+39 files in other folders)
