[project]
name = "Ohana"
version = "0.1.0"
description = "Ohana"
readme = "README.md"
requires-python = ">=3.8, <4.0"

[tool.nonebot]
adapters = [
    { name = "OneBot V11", module_name = "nonebot.adapters.onebot.v11" }
]
plugins = ["nonebot_plugin_imageutils", "nonebot_plugin_petpet", "nonebot_plugin_acm_reminder"]
plugin_dirs = ["src/plugins", "src/plugins_in_components"]
builtin_plugins = ["echo"]
