[project]
name = "Ohana"
version = "0.1.0"
description = "Ohana"
readme = "README.md"
requires-python = ">=3.8, <4.0"

[tool.nonebot]
adapters = [
    { name = "OneBot V11", module_name = "nonebot.adapters.onebot.v11" }
]
plugins = ["nonebot_plugin_apscheduler", "nonebot_plugin_htmlrender"]

plugin_dirs = ["src/test_plugins", "src/plugins", "src/game_plugins", "src/basic_plugins","src/tarin_plugins"]
builtin_plugins = ["echo"]
